--- a/.github/workflows/deploy-native.yml
+++ b/.github/workflows/deploy-native.yml
@@ -20,4 +20,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Print Commit Message
-        run: echo "::debug::{github.sha}"
+        run: echo ${{ github.sha }}
