--- a/.github/workflows/deploy-native.yml
+++ b/.github/workflows/deploy-native.yml
@@ -18,6 +18,7 @@ env:
 jobs:
   print-commit:
     runs-on: ubuntu-latest
+    if: "!contains(github.event.head_commit.message, '[skip ci]')"
     steps:
       - name: Print Commit Message
         run: echo ${{ github.sha }} 
